Fixed Converter Module Tests fails.