@@ -2,31 +2,33 @@ package guru.springframework.spring5recipeapp.converters;
 
 import guru.springframework.spring5recipeapp.commands.CategoryCommand;
 import guru.springframework.spring5recipeapp.domain.Category;
-import org.junit.Before;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 public class CategoryCommandToCategoryTest {
 
-    public static final Long ID_VALUE = new Long(1L);
+    public static final Long ID_VALUE = Long.valueOf(1L);
     public static final String DESCRIPTION = "description";
-    CategoryCommandToCategory conveter;
+    CategoryCommandToCategory converter;
 
-    @Before
+    @BeforeEach
     public void setUp() throws Exception {
-        conveter = new CategoryCommandToCategory();
+        converter = new CategoryCommandToCategory();
     }
 
     @Test
     public void testNullObject() throws Exception {
-        assertNull(conveter.convert(null));
+        assertNull(converter.convert(null));
     }
+
 
     @Test
     public void testEmptyObject() throws Exception {
-        assertNotNull(conveter.convert(new CategoryCommand()));
+        assertNotNull(converter.convert(new CategoryCommand()));
     }
+
 
     @Test
     public void convert() throws Exception {
@@ -36,7 +38,7 @@ public class CategoryCommandToCategoryTest {
         categoryCommand.setDescription(DESCRIPTION);
 
         //when
-        Category category = conveter.convert(categoryCommand);
+        Category category = converter.convert(categoryCommand);
 
         //then
         assertEquals(ID_VALUE, category.getId());
